--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <span class="oi oi-task d-inline d-lg-none"></span> <!-- task/checkmark icon for mobile -->  
         Taskmaster Pro Edition
       </h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">
+      <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal">
         <span class="oi oi-plus"></span> <!-- plus icon -->
         Add Task
       </button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">
+      <button id="remove-tasks" class="btn btn-block btn-delete">
         <span class="oi oi-trash"></span> <!-- trash icon-->
         Delete All Tasks
       </button>
@@ -127,8 +127,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save Task</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-save">Save Task</button>
         </div>
       </div>
     </div>
